# ticomon-v2

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Architecture Design Document (ADD).docx  Dockerfile  README.md  Reglass.docx  main.py  pokemon_data.csv  pokemon_evolutions(1).csv  pyproject.toml  railway.json
docs/: candies.md  collections.md  pvp.md  release.md  safari.md  shops.md
infrastructure/: db_config.py
rendering/: animacion_captura.py  animacion_evolucion.py  capture_animation.py  evolution_animation.py  gif_urls.py  spawn_preview.py  sprites.py  variant_assets.py
sandbox/: benchmark_capture.py  render_pokedex.py  simulate_capture.py  simulate_rarity_selector.py  simulate_spawn.py  simulate_weighted_selector.py
scrips/: build_species.py  build_species_v1.py  seed_bulbasaur.py  seed_species_neon.py  test_neon_connection.py
scripts/: audit_pvp_matrix.py  backfill_collection_entries.py  build_species.py  build_species_v1.py  check_all.py  create_achievement_schema.py  create_collection_schema.py  create_creature_loadout_schema.py  create_mint_schema.py  create_safari_schema.py  create_shop_schema.py  create_team_schema.py  create_trade_schema.py  creature_schema.py  diagnose_pvp_loadouts.py  diagnose_pvp_showdown.py  import_species.py  import_species_variants.py  load_evolutions.py  migrate_creature_loadouts.py  normalize_gifs.py  repair_move_pp.py  seed_bulbasaur.py  seed_species_neon.py  simulate_safari.py  sync_creature_loadout_catalog.py  test_neon_connection.py
simulation/: __init__.py
test/: conftest.py  (+20 more)
(+645 files in other folders)
